sns 로그인 구현

--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -1384,3 +1384,16 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
       content: "\f095"; }
     .site-footer ul.quick-info li.address:before {
       content: "\e8b4"; }
+
+.jy-user-info-ul {
+    /* display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px; */
+    width: 880px;
+    font-size: 0;
+    background: #834b4b;
+}
