--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -125,8 +125,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
         padding-right: 15px;
         padding-left: 15px; } }
 
-.spinner-border {
-  color: #1A374D; }
+/* .spinner-border {
+  color: #1A374D; } */
 
 /*PRELOADING------------ */
 #overlayer {
