--- a/front/src/assets/css/login.css
+++ b/front/src/assets/css/login.css
@@ -129,3 +129,17 @@
   .user-info ul {
     padding: 0 !important;
   }
+
+  .circle {
+    margin: 0 auto;
+    width: 200px;
+    height: 200px;
+    border: 10px solid hsl(0, 0%, 100%);
+    border-radius: 50%;
+    z-index: 0;
+}
+.wrapper {
+    margin: 0 auto;
+    /* padding: 30px; */
+    max-width: 1170px;
+}
