--- a/front/src/index.css
+++ b/front/src/index.css
@@ -11,3 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Bootstrap CSS 추가 */
+@import '~bootstrap/dist/css/bootstrap.min.css';
